fix: changed alignment method for header

--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,14 @@ body {
 
 .container {
   flex-grow: 1;
+  display: flex;
   flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   padding: 0 32px;
 }
 
 .header {
-  justify-self: center;
   text-align: center;
   max-width: 520px;
   padding: 110px 0 0;
